Revert "Switch dark mode button from absolute to fixed"
This reverts commit 44bb3def6ab770d03568f838867fea8171c9d875.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 .toggleDark {
-  position: fixed !important;
+  position: absolute !important;
   left: 2%;
   bottom: 2%;
 }
